[gd_scene load_steps=11 format=3 uid="uid://bwge4babpy161"]

[ext_resource type="Material" uid="uid://uutp0378pri2" path="res://materials/mace_metal.tres" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://bfhms1gcomxln" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PhysicsMaterial" uid="uid://baifveh640c1m" path="res://materials/physics_friction.tres" id="1_qhqgy"]
[ext_resource type="AudioStream" uid="uid://d6hgpg1wwx40" path="res://assets/sound/fx/Hurt.mp3" id="4_lvxji"]
[ext_resource type="AudioStream" uid="uid://bg44l4c0edmu1" path="res://assets/sound/fx/Stab.mp3" id="5_p47bc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1bvp3"]
radius = 0.565

[sub_resource type="SphereMesh" id="SphereMesh_h2yge"]
material = ExtResource("1_3vyb7")

[sub_resource type="SphereShape3D" id="SphereShape3D_g2els"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ig7tw"]
radius = 0.6

[sub_resource type="CylinderMesh" id="CylinderMesh_7mycd"]
material = ExtResource("1_3vyb7")
top_radius = 0.0
bottom_radius = 0.2
height = 0.524

[node name="Player" type="RigidBody3D"]
collision_layer = 65
collision_mask = 65
physics_material_override = ExtResource("1_qhqgy")
center_of_mass_mode = 1
script = ExtResource("1_g2els")

[node name="RBCollision" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_1bvp3")

[node name="BallMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_h2yge")
skeleton = NodePath("../..")

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 2.26267e-08, -8.44439e-08, 0, 0.965926, 0.258819, 8.74228e-08, 0.258819, -0.965926, 0, 0, 0)

[node name="SpringArm" type="SpringArm3D" parent="CameraPivot"]
unique_name_in_owner = true
collision_mask = 2
shape = SubResource("SphereShape3D_g2els")
spring_length = 8.0

[node name="Camera" type="Camera3D" parent="CameraPivot/SpringArm"]
unique_name_in_owner = true

[node name="HitBox" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 68
collision_mask = 68

[node name="HitBoxCollision" type="CollisionShape3D" parent="HitBox"]
shape = SubResource("SphereShape3D_ig7tw")

[node name="SpikeMeshes" type="Node3D" parent="."]

[node name="SpikeMesh" type="MeshInstance3D" parent="SpikeMeshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_7mycd")
skeleton = NodePath("../..")

[node name="SpikeMesh2" type="MeshInstance3D" parent="SpikeMeshes"]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("CylinderMesh_7mycd")
skeleton = NodePath("../..")

[node name="SpikeMesh3" type="MeshInstance3D" parent="SpikeMeshes"]
transform = Transform3D(-1, 8.74228e-08, 0, 3.82137e-15, 4.37114e-08, 1, 8.74228e-08, 1, -4.37114e-08, 0, -5.96046e-08, 0.5)
mesh = SubResource("CylinderMesh_7mycd")
skeleton = NodePath("../..")

[node name="SpikeMesh4" type="MeshInstance3D" parent="SpikeMeshes"]
transform = Transform3D(-1, 8.74228e-08, 0, -1.15463e-14, -1.41561e-07, -1, -8.74228e-08, -1, 1.41561e-07, 0, -5.96046e-08, -0.5)
mesh = SubResource("CylinderMesh_7mycd")
skeleton = NodePath("../..")

[node name="SpikeMesh5" type="MeshInstance3D" parent="SpikeMeshes"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, -5.96046e-08, 0)
mesh = SubResource("CylinderMesh_7mycd")
skeleton = NodePath("../..")

[node name="SpikeMesh6" type="MeshInstance3D" parent="SpikeMeshes"]
transform = Transform3D(1.31134e-07, 1, 0, -1, 1.31134e-07, 0, 0, 0, 1, 0.5, -5.96046e-08, 0)
mesh = SubResource("CylinderMesh_7mycd")
skeleton = NodePath("../..")

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lvxji")
volume_db = -25.0

[node name="StabSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_p47bc")
volume_db = -25.0

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_pickup_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_pickup_body_entered"]
